--- a/index.html
+++ b/index.html
@@ -1,3 +1,102 @@
-<html>
-<h1>Welcome to my website!</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Bellybutton Biodiversity</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="static/css/style.css"> -->
+  <style>
+    .jumbotron {
+      background-image: url("static/images/bacteria-thumb.jpeg");
+      background-size: 80%;
+      text-align: center;
+      font-weight: bold;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      color: chocolate;
+    }
+
+    div.jumbotron>h1 {
+      text-shadow: 3px 3px 5px black;
+    }
+
+    p {
+      color: black;
+      text-shadow: 2px 2px 4px #FFFFFF;
+    }
+
+
+    body {
+      background-image: url("static/images/bellybutton.jpeg");
+      background-size: 140%;
+      text-align: center;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 jumbotron text-center">
+        <h1>Belly Button Biodiversity Dashboard</h1>
+        <p style="color: black; font-family: Arial, Helvetica, sans-serif;"><b>Use the interactive charts below to
+            explore the dataset</b></p>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <h3 style="color: blue; ">Project Overview</h3>
+          <p style="color: black; font-size: medium;">In this project, we helping Roza to create dynamic charts to
+            visualize the belly button biodiversity research
+            result. By selecting the test subject id below at the left side, you will see the demographic infomation
+            about
+            the test sample. The charts represent the indicator for baterias from the samples.
+          </p>
+
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <!-- <Create DROP DOWN MENU FOR TEST ID NO.> -->
+      <div class="col-md-2">
+        <div class="well" , style="background-color:lightskyblue;">
+          <h5>Test Subject ID No.:</h5>
+          <!-- <select id="selDataset"></select> -->
+          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+        </div>
+        <!-- <DISPALY DEMOGRAPHIC INFO OF SELECTED ID NO.> -->
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Demographic Info</h3>
+          </div>
+          <div id="sample-metadata" class="panel-body"></div>
+        </div>
+      </div>
+      <!-- <DISPALY Horizontal Bar Chart> -->
+      <div class="col-md-5">
+        <div id="bar"></div>
+      </div>
+      <!-- <DISPALY Gauge Chart> -->
+      <div class="col-md-5">
+        <div id="gauge"></div>
+      </div>
+    </div>
+    <!-- <DISPALY Bubble Chart> -->
+    <div class="row">
+      <div class="col-md-12">
+        <div id="bubble"></div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="charts.js"></script>
+
+</body>
+
 </html>
